src/sass/_top.sass
.top
	padding-bottom: 100vw
	background-image: url('../img/wellness.svg'), linear-gradient(to right, #528b6a, #a8ceb9)
	background-position: bottom 60px center, bottom
	background-repeat: no-repeat
	background-size: 90%, auto, contain
	//background: 90%, auto, contain / bottom 60px center no-repeat url('../img/wellness-248.png'), linear-gradient(to right, #528b6a, #a8ceb9)

	//@include bg-img(bottom)

	@include retina($media-mobile)
		background-image: url('../img/wellness.svg'), linear-gradient(to right, #528b6a, #a8ceb9)

	&__logo
		position: absolute
		//top: 16px
		left: 50%
		transform: translateX(-50%)
		&-img
			width: 82px
			height: 46px

	&__heading
		margin: 40px 16px 0
		@include primary-h3()

	&__text
		margin: 10px 16px 0
		@include primary-text-h3-bold()

	&__link-arrow
		display: inline-block
		margin: 24px 0 0 16px
		@include link-arrow($primary-text-white)
		@include secondary-text-h3-bold($primary-text-white)


@media (min-width: $media-tablet)
	.top
		//padding-bottom: calc(55vw + 20px)
		//background: right bottom/65% no-repeat url('../img/wellness-490.png'), linear-gradient(to right, #528b6a, #a8ceb9)
		//background-position: bottom 60px center, bottom
		background-size: 80%, auto, contain

		&__logo
			top: 9px

		&__heading
			margin: 80px 30px 0 30px
			@include primary-h1-bold()

		&__text
			margin: 20px 30px 0 30px
			@include primary-text-h3()

		&__link-arrow
			margin: 40px auto 0 30px

		//@include retina($media-tablet)
			//background: right bottom/65% no-repeat url('../img/wellness-490.png'), linear-gradient(to right, #528b6a, #a8ceb9)

@media (min-width: $media-desktop)
	.top
		padding-bottom: 167px
		@include padding-left-right-calc($content)
		//background: 50vw bottom/700px no-repeat url('../img/wellness-490.png'), linear-gradient(to right, #528b6a, #a8ceb9)
		background-position: bottom 60px right calc(50% - 330px), bottom
		background-size: 490px, 100%, contain

		&__logo
			top: 0
			left: 0
			transform: translateX(0)

			&-img
				width: 162px
				height: 93px

		&__heading
			margin: 137px 0 0
			max-width: 452px
			@include primary-h1-bold()

		&__text
			margin: 20px 0 0

		&__link-arrow
			margin: 80px 0 0

